secgrp.tf
resource "aws_security_group" "kpa-secgrp-dg" {
  name   = "kpa-secgrp-dg"
  vpc_id = aws_vpc.kpa-vpc-dg.id

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "SSH from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.trusted_ips
  }

  ingress {
    description = "HTTP from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.trusted_ips
  }

  tags = {                        # TAGS NEEDED
    Name = "kpa-secgrp-dg"
  }
}
